fixed the candidates card aligning

--- a/client/src/pages/Candidates/VoteForCandidate/style.css
+++ b/client/src/pages/Candidates/VoteForCandidate/style.css
@@ -14,7 +14,7 @@
 
 .candidates-cards-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 4rem;
 }
